--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,7 @@ html {
 .container {}
 
 .container-navbar {
-    background-color: #555555;
+    background-color: crimson;
     width: 100%
     height: 10vh;
 }
@@ -57,9 +57,10 @@ html {
     height: 320px;
     display: flex;
     flex-direction: column;
-    justify-content: justify;
+    justify-content: center;
     align-items: center;
     border-radius: 60px;
+    text-align: center;
 box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -78,6 +79,7 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     flex-direction: column;
     justify-content: justify;
     align-items: center;
+    text-align: center;
     border-radius: 60px;
 box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -98,6 +100,7 @@ box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     justify-content: center;
     align-items: center;
     border-radius: 60px;
+    text-align: center;
 box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -145,8 +148,8 @@ margin-bottom: 60px;
 display: grid;
 grid-template-columns:  repeat(3, 2fr);
 gap: 10px;
-pendding: 20px;
-background-color: crimson;
+pendding: 10px;
+background-color: white;
 }
  .grid-items{
     display: none;
@@ -162,7 +165,7 @@ display: grid;
 grid-template-columns:  repeat(3, 2fr);
 gap: 10px;
 pendding: 20px;
-background-color: aqua;
+background-color: white;
 }
 
 .grid-container-2 {
@@ -170,7 +173,7 @@ display: grid;
 grid-template-columns:  repeat(3, 2fr);
 gap: 10px;
 pendding: 20px;
-background-color: palegreen;
+background-color: white;
 }
 
 .grid-container-3 {
@@ -178,7 +181,7 @@ display: grid;
 grid-template-columns:  repeat(3, 2fr);
 gap: 10px;
 pendding: 20px;
-background-color: silver;
+background-color: white;
 }
 
 .grid-container-4 {
@@ -186,7 +189,7 @@ display: grid;
 grid-template-columns:  repeat(3, 2fr);
 gap: 10px;
 pendding: 20px;
-background-color: gold;
+background-color: white;
 }
 
 .grid-container-5 {
@@ -194,5 +197,5 @@ display: grid;
 grid-template-columns:  repeat(3, 2fr);
 gap: 10px;
 pendding: 20px;
-background-color: purple;
+background-color: white;
 }
